
// TODO: Review style guidelines

syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto"; 

option csharp_namespace = "PeakSWC.RemoteWebView";

package webview;

message SendMessageRequest {
    string id = 1;
    string message = 2;
}
message FileMessageRequest {
    string id = 1;
    string path = 2;
}
message IdMessageRequest {
    string id = 1;
}

message CreateWebViewRequest {
  string id = 1;
  string htmlHostPath = 2;
  string markup = 3;
  string group = 4;
  int32 pid = 5;
  string processName = 6;
  string hostName = 7;
  bool enableMirrors = 8;
}

message WebMessageResponse {
    string response = 1;
    string url = 2;
    string cookies = 3;
}

message IdArrayResponse {
    repeated string responses = 1;
}

message StringRequest {
    string id = 1;
    string request = 2; 
}

message SendSequenceMessageRequest {
    string id = 1;
    uint32 sequence = 2;
    string message = 3; 
    string url = 4;
    string clientId = 5;
    string cookies = 6;
    bool isPrimary = 7;
}

message ReceiveMessageRequest {
    string id = 1;
    string clientId = 2;
    bool isPrimary = 3;
}

message SendMessageResponse {
    string id = 1;
    bool success = 2;
}

message PingMessageResponse {
    string id = 1;
    bool cancelled = 2;
}
message PingMessageRequest {
    string id = 1;
    bool initialize = 2;
    int32 pingIntervalSeconds = 3;
}

message ServerFileReadRequest {
  string client_id = 1;
  string request_id = 2;
  string path = 3;
 
  RequestType request_type = 4; 

  enum RequestType {
    MetaData = 0;
    FileData = 1;
  }
}

message ClientFileReadResponse {
  string client_id = 1;
  string request_id = 2;
  string path = 3;
 
  oneof response {
    Init init = 4;
    FileMetadata metadata = 5;
    FileData file_data = 6;
  }
}

message Init {
   string htmlHostPath = 1;
}

message FileMetadata {
  int64 length = 1;
  int64 lastModified = 2;
  int32 status_code = 3;
  string e_tag = 4;
}

message FileData {
    bytes file_chunk = 1;
}

service WebViewIPC {
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse); 
    rpc Shutdown(IdMessageRequest) returns (google.protobuf.Empty); 
    rpc CreateWebView(CreateWebViewRequest) returns (stream WebMessageResponse);
    rpc RequestClientFileRead(stream ClientFileReadResponse ) returns (stream ServerFileReadRequest );
    rpc GetIds(google.protobuf.Empty) returns (IdArrayResponse);
    rpc Ping(stream PingMessageRequest) returns (stream PingMessageResponse);
}

service BrowserIPC {
    rpc ReceiveMessage(ReceiveMessageRequest) returns (stream StringRequest);
    rpc SendMessage(SendSequenceMessageRequest) returns (SendMessageResponse);
}

enum ClientState {
    Connected = 0;
    ShuttingDown = 1;
}

message ClientResponse {
    string id = 1;
    string markup = 2;
    string url = 3;
    ClientState state = 4;
    string group = 5;
}

message ClientResponseList {
    repeated ClientResponse clientResponses = 1;
}

message UserMessageRequest {
    string oid = 1;
    string id = 2;
}

message UserRequest {
    string oid = 1;
}
message UserResponse {
    repeated string groups = 1;
}

enum TaskStatus  {
    Created = 0;
    WaitingForActivation = 1;
    WaitingToRun = 2;
    Running = 3;
    WaitingForChildrenToComplete = 4;
    RanToCompletion = 5;
    Canceled = 6;     
    Faulted = 7;
}

message TaskResponse {
    string name = 1;
    TaskStatus status = 2;
}

message ConnectionResponse {
    string id = 1;
    repeated TaskResponse taskResponses = 2;
    bool inUse = 3;
    string hostName = 4;
    string userName = 5;
    double maxFileReadTime = 6;
    int64 totalBytesRead = 7;
    int32 totalFilesRead = 8;
    double totalReadTime = 9;
    double timeConnected = 10;
}

message ServerResponse {
    int64 workingSet = 1;
    int64 peakWorkingSet = 2;
    int32 threads = 3;
    int32 handles = 4;
    repeated ConnectionResponse connectionResponses = 5;
    double totalProcessorTime = 6;
    double upTime = 7;
    bool client_cache_enabled = 8;
    bool server_cache_enabled = 9;
}

message EventResponse {
    google.protobuf.Timestamp timestamp = 1;
    repeated string messages = 2;
}

message LoggedEventResponse {
    repeated EventResponse eventResponses = 1;
}

message CacheRequest {
    google.protobuf.BoolValue enable_server_cache = 1;
    google.protobuf.BoolValue enable_client_cache = 2;
}

service ClientIPC {
    rpc GetClients(UserMessageRequest) returns (stream ClientResponseList);
    rpc GetUserGroups(UserRequest) returns (UserResponse);
    rpc GetServerStatus(google.protobuf.Empty) returns (ServerResponse);
    rpc GetLoggedEvents(google.protobuf.Empty) returns (LoggedEventResponse);
    rpc SetCache(CacheRequest) returns (google.protobuf.Empty);
}